Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11726

expired items not deleted during warmup in 3.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • ubuntu 12.04 64-bit

    Description

      Install couchbase server 2.5.0-1059 on 2 nodes (148 and 149)
      Create cluster with 2 nodes
      Create default bucket
      Load 1000 items with expiration time 1000 seconds
      Shutdown couchbase server.
      Upgrade node 148 and 149 to couchbase server 3.0.0-960
      After finished upgrade and wait for 1000 seconds, all items did not expired

      Re-run upgrade from 2.5.0 to 2.5.1, all items expired after upgrade and wait for 1000 seconds

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            abhinav Abhi Dangeti
            thuan Thuan Nguyen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty