MB-11726: QueueDirty when item expired on warmup

The return value for unlocked_softDelete is
NOT_FOUND even when an expired item is deleted.
Thus in the deleteItem scenario, we will need to
queue a dirty item, if v is not NULL.

Change-Id: I78bfa5f082aebb0e2760d761f00fd0a37744e0c1
Reviewed-on: http://review.couchbase.org/39423
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: abhinav dangeti <abhinav@couchbase.com>